Fix graphql api-docs build path (#4771)
Signed-off-by: Suyeon Jung <suyeonjungdev@gmail.com>

--- a/mkdocs/docs/graphql/v3.9.1/config.yml
+++ b/mkdocs/docs/graphql/v3.9.1/config.yml
@@ -1,13 +1,13 @@
 spectaql:
-  targetDir: ./docs
-  logoFile: ./assets/logo.png
-  faviconFile: ./assets/logo.png
+  targetDir: .
+  logoFile: ../logo.png
+  faviconFile: ../logo.png
   displayAllServers: true
-  themeDir: ./docs/custom-theme
+  themeDir: ./custom-theme
 
 introspection:
   removeTrailingPeriodFromDescriptions: false
-  schemaFile: ./schemas/*.graphqls
+  schemaFile: ../../../../chaoscenter/graphql/definitions/shared/*.graphqls
   queryNameStrategy: capitalizeFirst
   fieldExpansionDepth: 2
 
